# CrewAI_For_Stock_Prices_Visualization

./: .gitignore  README.md
stock_prices_visualization/: .gitignore  README.md  pyproject.toml  report.md
stock_prices_visualization/src/stock_prices_visualization/: crew.py  main.py  test.ipynb
stock_prices_visualization/src/stock_prices_visualization/config/: agents.yaml  tasks.yaml
stock_prices_visualization/src/stock_prices_visualization/tools/: custom_tool.py
