[project]
name = "stock_prices_visualization"
version = "0.1.0"
description = "stock_prices_visualization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.69.0",
    "crewai[tools]>=0.157.0,<1.0.0",
    "matplotlib>=3.10.6",
    "yfinance>=0.2.65",
]

[project.scripts]
stock_prices_visualization = "stock_prices_visualization.main:run"
run_crew = "stock_prices_visualization.main:run"
train = "stock_prices_visualization.main:train"
replay = "stock_prices_visualization.main:replay"
test = "stock_prices_visualization.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
